--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^6.3.3",
+    "jszip": "^3.2.2",
     "moment": "^2.22.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
